--- a/main/res/layout/assistant_textclassification.xml
+++ b/main/res/layout/assistant_textclassification.xml
@@ -24,6 +24,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="识别"
+            android:textColor="@color/white"
+            style="@style/Statistics_normalFontStyle1"
+            android:background="@drawable/trends_button"
             android:layout_gravity="center"></Button>
 
         <TextView
