--- a/main/res/layout/assistant_chattoast.xml
+++ b/main/res/layout/assistant_chattoast.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -20,8 +21,8 @@
                 android:id="@+id/assistant_chatToast_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="同学你好！"></TextView>
-
+                android:text="你好呦！今天心情怎么样啊？"
+                android:gravity="center"></TextView>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
