--- a/main/res/layout/statistics_emotiondatapage.xml
+++ b/main/res/layout/statistics_emotiondatapage.xml
@@ -1,6 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/emotiondatapage_background"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/statistics_emotiondatapage_hint"
+        style="@style/Statistics_TittlelFontStyle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0.7"
+        android:shadowColor="@color/green_dark"
+        android:text="心情数据统计"
+        android:textColor="@color/green_blue"
+        android:textSize="50sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"></TextView>
+
+
+    <TextView
+        android:id="@+id/statistics_emotiondatapage_text"
+        style="@style/Statistics_normalFontStyle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="您最近的心情变化情况如下:"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statistics_emotiondatapage_hint"></TextView>
+
+    <ImageView
+        android:id="@+id/statistics_emotiondatapage_image"
+        android:layout_width="350dp"
+        android:layout_height="400dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statistics_emotiondatapage_text"
+        android:src="@drawable/emotiondatapage_image"></ImageView>
+
+
+    <Button
+        android:id="@+id/statistics_emotionDiary_editDiary_shareBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
+        android:layout_marginLeft="100dp"
+        android:background="@drawable/trends_button"
+        android:text="分享"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/statistics_emotiondatapage_image"></Button>
+
+    <Button
+        android:id="@+id/statistics_emotionDiary_editDiary_submitBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
+        android:layout_marginRight="100dp"
+        android:background="@drawable/trends_button"
+        android:text="保存"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/statistics_emotiondatapage_image"></Button>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
